--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ email: mail.shulhan@gmail.com # Add your Email address
 phone: # Add your Phone number
 website: writing-above.space # Add your website
 linkedin: muhammad-shulhan-jihadi-809603209 # Add your Linkedin handle
-github: - # Add your Github handle
+github: BukanMedium # Add your Github handle
 twitter: '-' # Add your Twitter handle
 bandcamp: - # Add your Bandcamp username
 stackoverflow: - # Add your stackoverflow account
