--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ linkedin: muhammad-shulhan-jihadi-809603209 # Add your Linkedin handle
 github: BukanMedium # Add your Github handle
 twitter: '0000' # Add your Twitter handle
 bandcamp: 0000 # Add your Bandcamp username
-stackoverflow: - # Add your stackoverflow account
+stackoverflow: 0000 # Add your stackoverflow account
 
 # Newsletter
 mailchimp: "https://github.us1.list-manage.com/subscribe/post?u=8ece198b3eb260e6838461a60&amp;id=397d90b5f4"
