--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ description: 'Writing Above Space and Time' # this means to ignore newlines unti
 permalink: ':title:output_ext'
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://the-mvm.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-logo: "/assets/img/branding/tyrell blue.png"
-logo-icon: "/assets/img/branding/tyrell blue.png"
-logo-icon-SEO: "/assets/img/branding/tyrell blue.png" # must be a non SVG file
+logo: "/assets/img/branding/Tyrell 1800X500.png"
+logo-icon: "/assets/img/branding/Tyrell 1800X500.png"
+logo-icon-SEO: "/assets/img/branding/Tyrell 1800X500.png" # must be a non SVG file
 
 # Night/Dark mode
 # Default mode is "auto", "auto" is for auto nightshift
