--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ logo-icon-SEO: "/assets/img/branding/Tyrell 1800X500.png" # must be a non SVG fi
 # the browser is closed or not)
 night_mode: "auto"
 
-logo-dark: "/assets/img/branding/MVM-logo-full-dark.svg"
+logo-dark: "/assets/img/branding/Tyrell 1800X500 dark"
 highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code highlighter if needed
 
 # Author settings
