--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: ':title:output_ext'
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://writing-above.space" # the base hostname & protocol for your site, e.g. http://example.com
 logo: "/assets/img/branding/Tyrell White.png"
-logo-icon: "/assets/img/branding/Tyrell White.png"
+logo-icon: "/assets/img/branding/tyrell glow.svg"
 logo-icon-SEO: "/assets/img/branding/Tyrell White.png" # must be a non SVG file
 
 # Night/Dark mode
