--- a/_config.yml
+++ b/_config.yml
@@ -26,17 +26,17 @@ highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code h
 # Author settings
 author: Shlhn # add your name
 author-pic: a.jpg
-about-author: I Map
+about-author: It is what it is
 
 # Contact links
 email: mail.shulhan@gmail.com # Add your Email address
 phone: # Add your Phone number
 website: writing-above.space # Add your website
 linkedin: muhammad-shulhan-jihadi-809603209 # Add your Linkedin handle
-github: BukanMedium # Add your Github handle
-twitter: '0000' # Add your Twitter handle
-bandcamp: 0000 # Add your Bandcamp username
-stackoverflow: 0000 # Add your stackoverflow account
+github:  # Add your Github handle
+twitter:  # Add your Twitter handle
+bandcamp:  # Add your Bandcamp username
+stackoverflow: # Add your stackoverflow account
 
 # Newsletter
 mailchimp: "https://github.us1.list-manage.com/subscribe/post?u=8ece198b3eb260e6838461a60&amp;id=397d90b5f4"
