--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ about-author: It is what it is
 email: mail.shulhan@gmail.com # Add your Email address
 phone: # Add your Phone number
 website: writing-above.space # Add your website
+github: BukanMedium # Add your Github handle
 linkedin: muhammad-shulhan-jihadi-809603209 # Add your Linkedin handle
 twitter:  # Add your Twitter handle
 bandcamp:  # Add your Bandcamp username
